k8s/manifests/service.yaml
# This is a sample deployment manifest file for a simple web application.
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: react-app-github-actions
  namespace: frontend
  labels:
    app: react-app-github-actions
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
  selector:
    app: react-app-github-actions
