k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-github-actions
  namespace: frontend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - www.abumahir.com
    secretName: letsencrypt-nginx
  rules:
    - host: www.abumahir.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-github-actions
                port:
                  number: 80
  ingressClassName: nginx
